--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,14 +3,14 @@
   role: Création sonore et sonorisation
   description: 'Création sonore en collaboration avec [Joana Schweizer](https://anikivovo.wixsite.com/joschweizeranikivovo) pour le spectacle de danse et musique _O que importa é o caminho_ de la compagnie **Aniki Vóvó**'
   picture: o_que_importa_e_o_caminho.jpg
-  url: https://anikivovo.wixsite.com/joschweizeranikivovo
+  url: https://vimeo.com/214994278
 
 - name: Jingle Le Wagon
   author: Yoann Saunier
   role: Création de Jingle
   description: "Création d'un jingle musical indroduisant les vidéos pédagogiques et les événements de l'école de code [Le Wagon](https://www.lewagon.com/fr)"
   picture: le_wagon_logo.jpg
-  url: https://www.lewagon.com/fr
+  url: https://youtu.be/RODFbVCmnk4
 
 - name: Les Témoins - Saison 2
   author: Hervé Hadmar
