--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: Yoann Saunier - Musicien Ingénieur du Son
-email: yoann.saunier@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
+description: >
   Musicien, ingénieur du son et compositeur spécialisé dans les musiques électroniques. Diplômé de la Formation
   Supérieure au Métiers du Son au Conservatoire de Paris, il collabore avec divers compositeurs de musiques à l'image (Eric Demarsan,
   Marie-Jeanne Serero…) et se produit régulièrement sur scène dans différents groupes (KAB, Malca, Strass, Mélie Fraisse…)
