--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,7 +5,7 @@
   picture: o_que_importa_e_o_caminho.jpg
   url: https://vimeo.com/214994278
 
-- name: Jingle Le Wagon
+- name: Jingle pour Le Wagon
   author: Yoann Saunier
   role: Création de Jingle
   description: "Création d'un jingle musical indroduisant les vidéos pédagogiques et les événements de l'école de code [Le Wagon](https://www.lewagon.com/fr)"
@@ -22,7 +22,7 @@
 - name: Chère anorexie
   author: Judith du Pasquier
   role: Guitariste
-  description: "Enregistrement des guitares pour la musique du documentaire Arte [_Chère anorexie_](http://boutique.arte.tv/f11362-chere_anorexie) de Judith du Pasquier et Sylvie Quesemand Zucca"
+  description: "Enregistrement des guitares pour la musique du documentaire Arte [_Chère anorexie_](http://boutique.arte.tv/f11362-chere_anorexie) de Judith du Pasquier et Sylvie Quesemand Zucca, diffusé en 2016"
   picture: chere_anorexie.jpg
   url: http://boutique.arte.tv/f11362-chere_anorexie
 
