--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -1,4 +1,14 @@
 - name: Audio Engineering Society
   description: "**1° place** à la Student Competition @ **Audio Engineering Society** 132nd convention — Silver Award (Catégorie 3 : Modern Studio) "
-  picture: TODO Yoann
+  picture: aes.jpg
   url: TODO Yoann
+
+- name: Vovox Make the score!
+  description: "Vovox Make the score! 10th Anniversary competition (Août 2013) : 1° place"
+  picture: vovox.jpg
+  url: http://www.vovox.com/makethescore
+
+- name: Pimps of Joytime's Booty Text
+  description: "Pimps of Joytime's _Booty Text_ Remix Contest (Mars 2014) : 1° place"
+  picture: vovox.jpg
+  url: http://www.vovox.com/makethescore
