--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,40 +1,40 @@
 - name: O que importa é o caminho
-  author: Joana Schweizer
+  # author: Joana Schweizer
   role: Création sonore et sonorisation
   description: 'Création sonore en collaboration avec [Joana Schweizer](https://anikivovo.wixsite.com/joschweizeranikivovo) pour le spectacle de danse et musique _O que importa é o caminho_ de la compagnie **Aniki Vóvó**'
   picture: o_que_importa_e_o_caminho.jpg
   url: https://vimeo.com/214994278
 
 - name: Jingle pour Le Wagon
-  author: Yoann Saunier
+  # author: Yoann Saunier
   role: Création de Jingle
-  description: "Création d'un jingle musical indroduisant les vidéos pédagogiques et les événements de l'école de code [Le Wagon](https://www.lewagon.com/fr)"
+  description: "Création d'un jingle musical indroduisant les vidéos pédagogiques et événementielles de l'école de code [Le Wagon](https://www.lewagon.com/fr)"
   picture: le_wagon_logo.jpg
   url: https://youtu.be/RODFbVCmnk4
 
 - name: Les Témoins - Saison 2
-  author: Hervé Hadmar
+  # author: Hervé Hadmar
   role: Arrangements et programmations musicales
   description: 'Arrangements et programmations de la musique pour [_Les Témoins, saison 2_](https://www.amazon.fr/dp/B06XJD6MWG), série policière française en 8 épisodes créée par Marc Herpoux et Hervé Hadmar et diffusée en mars 2017 sur **France 2**'
   picture: les_temoins_saison_2.jpg
   url: https://www.amazon.fr/dp/B06XJD6MWG
 
 - name: Chère anorexie
-  author: Judith du Pasquier
+  # author: Judith du Pasquier
   role: Guitariste
   description: "Enregistrement des guitares pour la musique du documentaire Arte [_Chère anorexie_](http://boutique.arte.tv/f11362-chere_anorexie) de Judith du Pasquier et Sylvie Quesemand Zucca, diffusé en 2016"
   picture: chere_anorexie.jpg
   url: http://boutique.arte.tv/f11362-chere_anorexie
 
 - name: Au-delà des murs
-  author: Hervé Hadmar
+  # author: Hervé Hadmar
   role: Arrangements et programmations musicales
   description: "Programmations musicales pour [_Au-delà des murs_](http://sites.arte.tv/audeladesmurs/fr), mini-série franco-belge en 3 épisodes créée par Hervé Hadmar et Marc Herpoux, diffusée en septembre 2016 sur **Arte**"
   picture: au_dela_des_murs.jpg
   url: http://sites.arte.tv/audeladesmurs/fr
 
 - name: Qui a peur de Virginia Woolf ?
-  author: Edward Albee
+  # author: Edward Albee
   role: Guitariste
   description: "Interprétation des guitares enregistrées pour la pièce _Qui a peur de Virginia Woolf ?_ (Molière 2016) d'Edward Albee, mise en scène par Alain Françon et jouée au **Théâtre de l’Œuvre**"
   picture: qui_a_peur_de_virginia_woolf.jpg
@@ -46,14 +46,14 @@
   url: http://facebook.com/iammalca 
 
 - name: Les Témoins - Saison 1
-  author: Hervé Hadmar
+  # author: Hervé Hadmar
   role: Programmations musicales
   description: 'Programmations musicales en collaboration avec [Eric Demarsan](http://edemarsan.free.fr/index_f.htm) pour [_Les Témoins_](https://www.amazon.fr/dp/B06XJ89GT4), série policière française en 6 épisodes, créée par Marc Herpoux et Hervé Hadmar et diffusée en mars 2015 sur **France 2**'
   picture: les_temoins_saison_1.jpg
   url: https://www.amazon.fr/dp/B06XJ89GT4
 
 - name: 'Guillaume et les garçons, à table !'
-  author: Guillaume Gallienne
+  # author: Guillaume Gallienne
   role: Programmations musicales
   description: 'Programmations musicales en collaboration avec [Marie-Jeanne Serero](https://www.mariejeanneserero.fr) pour _Les Garçons et Guillaume, à table !_, comédie franco-belge écrite et réalisée par Guillaume Gallienne (César 2013)'
   picture: guillaume_et_les_garcons.jpg
