wagon podcasts update url

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,7 +2,7 @@
   role: Création sonore et Réalisation
   description: "Création d'un jingle musical d'introduction au podcast du Wagon. Réalisation de chaque épisode."
   picture: le_wagon_podcast.jpg
-  url: http://lewagon.fireside.fm/
+  url: https://shows.pippa.io/lewagon
 
 - name: O que importa é o caminho
   # author: Joana Schweizer
