Ajout de la mention "compositeur"

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Yoann Saunier - Musicien Ingénieur du Son
+title: Yoann Saunier - Musicien Ingénieur du Son Compositeur
 description: >
   Musicien, ingénieur du son et compositeur spécialisé dans les musiques électroniques. Diplômé de la Formation
   Supérieure au Métiers du Son au Conservatoire de Paris, il collabore avec divers compositeurs de musiques à l'image (Eric Demarsan,
